--- a/signup/signup.html
+++ b/signup/signup.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>RegistrationForm_v2 by Colorlib</title>
+	<base target="_parent">
+	<title>Registration Form</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- FONT -->
@@ -14,7 +15,6 @@
 </head>
 
 <body>
-
 	<div class="wrapper" style="background-image: url('images/bg-registration-form-2.jpg');">
 		<div class="inner">
 			<form id="signup_form" action="">
@@ -47,10 +47,9 @@
 						<span class="checkmark"></span>
 					</label>
 				</div>
-				<a class="bttn-default">Register Now</a>
 				<span id="suvalue"></span>
-				<a class="fb"><img src="images/facebook-f.svg" height="16px">&nbsp; Sign Up with facebook</a>
-				<p style="text-align: center; margin-top: 20px;">Already registered? Log in <a href="#" style="color:rgb(72, 44, 191);">here</a></p>
+				<a class="bttn-default">Register Now</a>
+				<p style="text-align: center; margin-top: 20px;">Already registered? Log in <a class="login-link" style="color:rgb(72, 44, 191);">here</a></p>
 			</form>
 		</div>
 	</div>
@@ -58,7 +57,7 @@
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/signup.js"></script>
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
 </html>
