--- a/index.html
+++ b/index.html
@@ -88,11 +88,14 @@
                         <span class="caret"></span>
                     </a>
                     <ul class="prof-down dropdown-menu" aria-labelledby="profDrop">
-                        <li><a class="ditm" href="about.html"><i class="lnr lnr-user"></i>&nbsp;About Me</a></li>
-                        <li><a class="ditm" href="orders.html"><i class="lnr lnr-cart"></i>&nbsp;Orders</a></li>
-                        <li><a class="ditm" href="listings.html"><i class="lnr lnr-list"></i>&nbsp;Listings</a></li>
+                        <li><a class="ditm" href="about.html" data-fancybox data-options='{"type" : "iframe", "iframe" : {"preload" : false, "css" : {"width" : "600px"}}}'>
+                                <i class="lnr lnr-user"></i>&nbsp; &nbsp;About Me</a></li>
+                        <li><a class="ditm" href="orders.html" data-fancybox data-options='{"type" : "iframe", "iframe" : {"preload" : false, "css" : {"width" : "600px"}}}'>
+                                <i class="lnr lnr-cart"></i>&nbsp; &nbsp;Orders</a></li>
+                        <li><a class="ditm" href="listings.html" data-fancybox data-options='{"type" : "iframe", "iframe" : {"preload" : false, "css" : {"width" : "600px"}}}'>
+                                <i class="lnr lnr-list"></i>&nbsp; &nbsp;Listings</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a class="ditm log-out"><i class="lnr lnr-home"></i>&nbsp;Log Out</a></li>
+                        <li><a class="ditm log-out"><i class="lnr lnr-home"></i>&nbsp; &nbsp;Log Out</a></li>
                     </ul>
                 </div>
             </div>
@@ -531,7 +534,7 @@
                         <div class="space-20"></div>
                         <form id="mc-form">
                             <input type="email" class="control" placeholder="Enter your email" required="required" id="mc-email">
-                            <button class="bttn-white active" type="submit"><span class="lnr lnr-location"></span>
+                            <button class="subscribe-btn active" type="submit"><span class="lnr lnr-location"></span>
                                 Subscribe</button>
                             <label class="mt10" for="mc-email"></label>
                         </form>
@@ -593,7 +596,7 @@
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <span>Copyright &copy;<script>
                                 document.write(new Date().getFullYear());
-                            </script> All rights reserved | This template is made with <i class="lnr lnr-heart"
+                            </script> All rights reserved | This template was made with <i class="lnr lnr-heart"
                                 aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <div class="space-30 hidden visible-xs"></div>
@@ -601,12 +604,12 @@
                     <div class="col-xs-12 col-md-7">
                         <div class="footer-menu">
                             <ul>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Features</a></li>
-                                <li><a href="#">Sell</a></li>
-                                <li><a href="#">Testimonial</a></li>
-                                <li><a href="#">Contacts</a></li>
+                                <li><a href="#about_page">About</a></li>
+                                <li><a href="#features_page">Process</a></li>
+                                <li><a href="#gallery_page">Featured</a></li>
+                                <li><a href="#sellIFrame">Sell</a></li>
+                                <li><a href="#testimonial_page">Testimonial</a></li>
+                                <li><a href="#contact_page">Contacts</a></li>
                             </ul>
                         </div>
                     </div>
