--- a/signup/signup.html
+++ b/signup/signup.html
@@ -48,6 +48,9 @@
 					</label>
 				</div>
 				<span id="suvalue"></span>
+				<div class="login-loader">
+					<img class="loading-image" src="images/double-ring.gif" />
+				</div>
 				<a class="bttn-default">Register Now</a>
 				<p style="text-align: center; margin-top: 20px;">Already registered? Log in <a class="login-link" style="color:rgb(72, 44, 191);">here</a></p>
 			</form>
@@ -57,6 +60,7 @@
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/js.cookie.js"></script>
 	<script src="js/signup.js"></script>
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
