--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
                         <h3 class="dark-color wow fadeInUp" data-wow-delay="0.4s">Your happiness matters</h3>
                         <div class="space-20"></div>
                         <div class="desc wow fadeInUp" data-wow-delay="0.6s">
-                            <p>We want all your indulgence with kmoby to always leave a positive impression. We uphold
+                            <p>We want your phone trading experience at kmoby to always leave a positive impression. We
+                                uphold
                                 your confidence in us and always ensure what you see on the site is what you get,
                                 nothing less.</p>
                         </div>
