added working status div in buy page

--- a/buy.html
+++ b/buy.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/linearicons.css">
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css'>
+    <link rel="stylesheet" href="css/font-awesome4.6.1.css">
+    <!-- <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/animate.css">
     <!-- Main-Stylesheets -->
@@ -278,6 +279,22 @@
         </div>
     </div>
     <!-- Model-Carousel-End -->
+    <!-- Working-Status-->
+    <div class="working-status">
+        <div class="ws-brand-new">
+            <a>Brand New</a>
+        </div>
+        <div class="ws-excellent">
+            <a>Excellent</a>
+        </div>
+        <div class="ws-good">
+            <a>Good</a>
+        </div>
+        <div class="ws-damaged">
+            <a>Damaged</a>
+        </div>
+    </div>
+    <!-- Working-Status-End -->
     <!--Vendor-JS-->
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
     <script src="js/vendor/jquery-ui.js"></script>
