kusafisha kiasi tu

--- a/buy.html
+++ b/buy.html
@@ -128,7 +128,7 @@
     <!-- Brands-Area -->
     <div class="brands-area">
         <div class="brand-group">
-            <img class="samsung-logo brand-logo active" src="images/samsung-logo.png">
+            <img class="samsung-logo brand-logo" src="images/samsung-logo.png">
             <img class="huawei-logo brand-logo" src="images/huawei-logo.png">
             <img class="iphone-logo brand-logo" src="images/iphone-logo.png">
         </div>
