added used phone link

--- a/buy.html
+++ b/buy.html
@@ -291,6 +291,9 @@
                 <div class="ws-brand ws-brand-new" data-value="brand-new">
                         <a>Brand New</a>
                 </div>
+                <div class="ws-brand ws-used" data-value="used">
+                        <a>Used</a>
+                </div>
                 <div class="ws-brand ws-excellent" data-value="excellent">
                         <a>Excellent</a>
                 </div>
