--- a/buy.html
+++ b/buy.html
@@ -305,6 +305,26 @@
                 </div>
         </div>
         <!-- Working-Status-End -->
+        <!-- Alerts -->
+        <div class="alerts">
+                <div class="chobra">
+                        <div class="bralert">
+                                <div class="alert-p">
+                                        <p>Select a Brand</p>
+                                </div>
+                                <img src="images/choose-alert-bg.svg">
+                        </div>
+                </div>
+                <div class="chocon">
+                        <div class="coalert">
+                                <div class="alert-p">
+                                        <p>Select Condition</p>
+                                </div>
+                                <img src="images/choose-alert-bg.svg">
+                        </div>
+                </div>
+        </div>
+        <!-- Alerts-End-->
         <!--Vendor-JS-->
         <script src="js/vendor/jquery-1.12.4.min.js"></script>
         <script src="js/vendor/jquery-ui.js"></script>
