--- a/buy.html
+++ b/buy.html
@@ -45,7 +45,7 @@
                                         <span class="icon-bar"></span>
                                         <span class="icon-bar"></span>
                                 </button>
-                                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"></a>
+                                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo"></a>
                         </div>
                         <div class="collapse navbar-collapse" id="primary_menu">
                                 <ul class="nav navbar-nav mainmenu">
@@ -289,7 +289,7 @@
         <!-- Working-Status-->
         <div class="working-status">
                 <div class="ws-brand ws-brand-new" data-value="brand-new">
-                        <a>Brand New</a>
+                        <a>Brand New <i class="fa fa-star"></i></a>
                 </div>
                 <div class="ws-brand ws-used" data-value="used">
                         <a>Used</a>
@@ -337,7 +337,7 @@
         <span class="sendvals"></span>
         <span class="tablename"></span>
         <!-- Ajax-Objects-End -->
-        <!-- Item-Cards -->
+        <!--
         <div class="item-cards">
                 <div class="card-box">
                         <div class="new-card-box">
@@ -386,7 +386,7 @@
                         </div>
                 </div>
         </div>
-        <!-- Item-Cards-End -->
+-->
         <!-- Vendor-JS -->
         <script src="js/vendor/jquery-1.12.4.min.js"></script>
         <script src="js/vendor/jquery-ui.js"></script>
